--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+    body {background-color: #b51240;
+          text-align: center;
+    }
+    h1   {color: #3dc3f4;}
+    </style>
+
     <title>The AJAXson 5</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="request-gif.js"></script>
@@ -9,8 +16,12 @@
     <h1>The AJAXson 5</h1>
 
     <form id="form-gif-request" />
-        <label>What kind of Jackson 5 related gif do you want?</label>
-        <input name="tag" type="text"/>
+        <label>What kind of Jackson 5 related gif do you want?</label><br>
+        <input name="tag" type="text"/><br><br>
+
+        <label>Prove you are not a robot by answering this riddle:</label><br>
+        <input name="riddleAnswer" type="text"/><label>Jacksons are better than one.</label><br><br>
+
         <input type="submit" value="Get my Gif!" />
     </form>
 
